# kicad-parser

./: .gitmodules  Cargo.toml  README.md
src/: lib.rs
src/sch/: mod.rs  model.rs  parser.rs  reader.rs  test.rs
